<resources>
    <string name="app_name">ProjectTwo</string>
    <string name="reminder_hint">Enter a reminder.</string>
    <string name="reminder_completed_label">Completed</string>
    <string name="location_hint">Enter a location.</string>
    <string name="reminders_details_label">Reminder Details</string>
    <string name="notes_hint">Enter reminder notes.</string>
    <string name="due_date_hint">Enter a due date.</string>
    <string name="checkbox_description">This checkbox represents if a reminder is completed.</string>
    <string name="new_reminder">New Reminder</string>
    <string name="notes">Reminder Notes</string>
    <string name="location">Reminder Location</string>
    <string name="due_date">Reminder Due Date</string>
    <string name="title">Reminder Title</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="reminder_due_date">Reminder Due Date</string>
</resources>