<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@color/design_default_color_secondary">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/reminders_details_label"
        android:height="48dp"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reminder Title"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/reminder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_margin="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reminder Due Date"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/reminder_due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/due_date_hint"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textAlignment="center"
        android:layout_margin="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reminder Location"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/reminder_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_margin="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reminder Notes"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/reminder_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_margin="16dp"/>
    <CheckBox
        android:id="@+id/reminder_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_completed_label"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:buttonTint="@color/black"/>
</LinearLayout>